--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.23.0"
+    "ethers": "^6.13.5",
+    "hardhat": "^2.23.0",
+    "ipfs-http-client": "^60.0.1"
   }
 }
