--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,6 @@ MONGO_URI = mongodb+srv://agriethos:yGRG7S6urN3EUrDV@agriethos-test.fekk9g8.mong
 
 JWT_SECRET=iloveyou47614367
 PORT=5000
+CLOUDINARY_CLOUD_NAME=dzls5biki
+CLOUDINARY_API_KEY=921391579718474
+CLOUDINARY_API_SECRET=5MuhfUsbB0mCUS9I06uVf3eUYug
