--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "CRUD  api agriethos",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "samuel oguntimehin",
   "license": "SEE LICENSE IN LICENSE",
