--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ PORT=5000
 CLOUDINARY_CLOUD_NAME=dzls5biki
 CLOUDINARY_API_KEY=921391579718474
 CLOUDINARY_API_SECRET=5MuhfUsbB0mCUS9I06uVf3eUYug
+WEATHER_API_KEY=94baa3d598f04a9abc8165529251105
