--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "samuel oguntimehin",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
+    "axios": "^1.9.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
