--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/providers": "^22.0.0",
     "axios": "^1.8.4",
+    "dayjs": "^1.11.13",
     "ethers": "^6.13.5",
     "lucide-react": "^0.509.0",
     "next": "15.1.3",
