--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "ethers": "^6.13.5",
     "lucide-react": "^0.509.0",
     "next": "15.1.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
