--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
