--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,6 @@ CLOUDINARY_CLOUD_NAME=dzls5biki
 CLOUDINARY_API_KEY=921391579718474
 CLOUDINARY_API_SECRET=5MuhfUsbB0mCUS9I06uVf3eUYug
 WEATHER_API_KEY=94baa3d598f04a9abc8165529251105
+EMAIL=agriethos@gmail.com
+EMAIL_PASS=fxsyjlgplirlpxlf
+CLIENT_URL=http://localhost:3000
