--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
     "express": "^5.1.0",
@@ -21,7 +23,9 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "qrcode": "^1.5.4"
+    "nodemailer": "^7.0.3",
+    "qrcode": "^1.5.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
