--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "CRUD  api agriethos",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --runInBand",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
@@ -28,6 +28,10 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.1"
   }
 }
